<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="?android:attr/listChoiceIndicatorSingle"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="?android:attr/listChoiceIndicatorSingle"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="?android:attr/listChoiceIndicatorSingle"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_registro"
            android:icon="?android:attr/listChoiceIndicatorSingle"
            android:title="@string/menu_registro" />
        <item
            android:id="@+id/nav_registros"
            android:icon="?android:attr/listChoiceIndicatorSingle"
            android:title="@string/menu_registros" />
        <item
            android:id="@+id/nav_documentos"
            android:icon="?android:attr/listChoiceIndicatorSingle"
            android:title="@string/menu_documentos" />
        <item
            android:id="@+id/nav_paginas"
            android:icon="?android:attr/listChoiceIndicatorSingle"
            android:title="@string/menu_paginas" />
        <item
            android:id="@+id/nav_logout"
            android:icon="?android:attr/listChoiceIndicatorSingle"
            android:title="@string/menu_cerrarsesion" />


    </group>
</menu>