<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.solucion.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.solucion.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.solucion.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_registro"
        android:name="com.example.solucion.RegistroFragment"
        android:label="@string/menu_registro"
        tools:layout="@layout/fragment_registro" />
    <fragment
        android:id="@+id/nav_registros"
        android:name="com.example.solucion.registro.RVRegistroFragment"
        android:label="@string/menu_registros"
        tools:layout="@layout/fragment_r_v_registro" />
    <fragment
        android:id="@+id/nav_documentos"
        android:name="com.example.solucion.documentos.DocumentosFragment"
        android:label="@string/menu_paginas"
        tools:layout="@layout/fragment_documentos" />
    <fragment
        android:id="@+id/nav_paginas"
        android:name="com.example.solucion.Paginas"
        android:label="@string/menu_paginas"
        tools:layout="@layout/fragment_paginas" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.solucion.ui.logout.LogoutFragment"
        android:label="@string/menu_cerrarsesion"
        tools:layout="@layout/fragment_logout" />

</navigation>