<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    app:cardBackgroundColor="@color/purple_500"
    app:cardCornerRadius="12dp"
    app:cardElevation="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/tvID"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/tvFecha"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="82dp"
            android:layout_height="43dp"
            android:layout_marginTop="12dp"
            android:text="@string/tvDescripcion"
            app:layout_constraintStart_toStartOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvPeso"
            app:layout_constraintStart_toStartOf="@+id/textView17"
            app:layout_constraintTop_toTopOf="@+id/tvFecha_Card" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvIMC"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toTopOf="@+id/tvDescripcion_Card" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tvGrasaCorporal"
            app:layout_constraintStart_toStartOf="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="84dp"
            android:text="@string/tvMinutos"
            app:layout_constraintStart_toEndOf="@+id/tvID_Card"
            app:layout_constraintTop_toTopOf="@+id/tvID_Card" />

        <TextView
            android:id="@+id/tvID_Card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toTopOf="@+id/textView12" />

        <TextView
            android:id="@+id/tvFecha_Card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/tvID_Card"
            app:layout_constraintTop_toTopOf="@+id/textView13" />

        <TextView
            android:id="@+id/tvIMC_Card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/tvPeso_Card"
            app:layout_constraintTop_toTopOf="@+id/textView16" />

        <TextView
            android:id="@+id/tvGrasaCorporal_Card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/tvIMC_Card"
            app:layout_constraintTop_toTopOf="@+id/textView18" />

        <TextView
            android:id="@+id/tvPeso_Card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/tvMinutos_Card"
            app:layout_constraintTop_toTopOf="@+id/textView15" />

        <TextView
            android:id="@+id/tvMinutos_Card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/textView17"
            app:layout_constraintTop_toTopOf="@+id/textView17" />

        <TextView
            android:id="@+id/tvDescripcion_Card"
            android:layout_width="79dp"
            android:layout_height="44dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/tvFecha_Card"
            app:layout_constraintTop_toTopOf="@+id/textView14" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>